# LMFTEngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
app/1-pong/: CMakeLists.txt  ponggamelogic.cpp  ponggamelogic.h
app/1-pong/assets/: base_config.json
src/: entity.cpp  entityfactory.cpp  eventmanager.cpp  game.cpp  gamelogic.cpp  logger.cpp  main.cpp  window.cpp
src/component/: physicsbox2d_component.cpp  transform2d_component.cpp
src/include/: component.h  componentfactory.h  entity.h  entityfactory.h  error.h  eventmanager.h  game.h  gamelogic.h  interfaces.h  logger.h  physicssystem.h  timer.h  types.h  window.h
src/include/component/: physicsbox2d_component.h  transform2d_component.h
src/include/events/: entity_create.h  entity_deleted.h
src/include/physics/: physicsbox2d.h
src/physics/: physicsbox2d.cpp
